--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
+    "ngx-owl-carousel-o": "^7.0.3",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.23",
+    "swiper": "^8.3.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
